--- a/app/src/main/res/layout/activity_medium_game.xml
+++ b/app/src/main/res/layout/activity_medium_game.xml
@@ -46,7 +46,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="button1"
@@ -55,7 +55,7 @@
                 android:clickable="true"
                 android:onClick="clickedTile" />
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -63,7 +63,7 @@
                 android:layout_column="1"
                 android:onClick="clickedTile" />
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -71,7 +71,7 @@
                 android:layout_column="2"
                 android:onClick="clickedTile" />
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -84,7 +84,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -92,7 +92,7 @@
                 android:layout_column="0"
                 android:onClick="clickedTile" />
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -100,7 +100,7 @@
                 android:layout_column="1"
                 android:onClick="clickedTile" />
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -108,7 +108,7 @@
                 android:layout_column="2"
                 android:onClick="clickedTile" />
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -121,7 +121,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -129,7 +129,7 @@
                 android:layout_column="0"
                 android:onClick="clickedTile" />
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -137,7 +137,7 @@
                 android:layout_column="1"
                 android:onClick="clickedTile" />
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -145,7 +145,7 @@
                 android:layout_column="2"
                 android:onClick="clickedTile" />
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -158,7 +158,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -166,15 +166,16 @@
                 android:layout_column="0"
                 android:onClick="clickedTile" />
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
                 android:id="@+id/button14"
                 android:layout_column="1"
-                android:onClick="clickedTile" />
+                android:onClick="clickedTile"
+                android:tag="blank"/>
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
@@ -182,7 +183,7 @@
                 android:layout_column="2"
                 android:onClick="clickedTile" />
 
-            <Button
+            <ImageButton
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:text="New Button"
