Removed actionbar, and added background image code to GameScreen.java

--- a/app/src/main/res/layout/activity_medium_game.xml
+++ b/app/src/main/res/layout/activity_medium_game.xml
@@ -37,6 +37,7 @@
     </LinearLayout>
 
     <TableLayout
+        android:id="@+id/medium_game_board"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:weightSum="4"
