--- a/app/src/main/res/layout/activity_easy_game.xml
+++ b/app/src/main/res/layout/activity_easy_game.xml
@@ -37,6 +37,7 @@
     </LinearLayout>
 
     <TableLayout
+        android:id="@+id/easy_game_board"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:weightSum="4"
