--- a/app/src/main/res/layout/activity_hard_game.xml
+++ b/app/src/main/res/layout/activity_hard_game.xml
@@ -36,6 +36,7 @@
     </LinearLayout>
 
     <TableLayout
+        android:id="@+id/hard_game_board"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:weightSum="4"
