--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,4 +1,5 @@
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
         android:key="select_difficulty"
@@ -10,16 +11,11 @@
         android:negativeButtonText="@null"
         android:positiveButtonText="@null" />
 
-    <EditTextPreference
-        android:key="picture_location"
+    <Preference
+        android:key="select_picture"
         android:title="@string/pref_picture_title"
         android:summary="@string/pref_picture_summary"
-        android:defaultValue="@string/pref_default_picture_location"
-        android:selectAllOnFocus="true"
-        android:inputType="textCapWords"
-        android:capitalize="words"
-        android:singleLine="true"
-        android:maxLines="1" />
+        android:defaultValue="@string/pref_default_picture_location" />
 
     <CheckBoxPreference
         android:key="use_ask_library"
