--- a/app/src/main/res/layout/activity_picture_list.xml
+++ b/app/src/main/res/layout/activity_picture_list.xml
@@ -2,21 +2,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" 
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="com.eecs481.tilematch.PictureList">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-        <ListView
+        android:layout_height="fill_parent" >
+        <GridView
             android:id="@+id/picList"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
-        </LinearLayout>
+            android:layout_height="fill_parent"
+            android:numColumns="3"
+            android:verticalSpacing="20dp"
+            android:horizontalSpacing="20dp" />
+    </LinearLayout>
 
 </RelativeLayout>
