--- a/app/src/main/res/layout/picture_object.xml
+++ b/app/src/main/res/layout/picture_object.xml
@@ -6,8 +6,9 @@
     android:layout_height="match_parent">
     
     <ImageView
-        android:id="@+id/picture_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/picture_object"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:onClick="pictureClick" />
 
 </LinearLayout>
