--- a/app/src/main/res/layout/activity_hard_game.xml
+++ b/app/src/main/res/layout/activity_hard_game.xml
@@ -1,8 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/BlueColor"
     android:paddingLeft="12dp"
     android:paddingRight="12dp"
     android:paddingTop="12dp"
@@ -18,6 +20,7 @@
         <Button
             android:layout_width="100dp"
             android:layout_height="120dp"
+            android:background="@drawable/rounded_button"
             android:text="Quit"
             android:id="@+id/QuitButton"
             android:layout_weight="1"
@@ -30,6 +33,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/timer"
             android:textSize="90dp"
+            android:textColor="@color/MaizeColor"
             android:gravity="right"
             android:layout_weight="1" />
 
