--- a/app/src/main/res/layout/activity_menu_screen.xml
+++ b/app/src/main/res/layout/activity_menu_screen.xml
@@ -1,11 +1,13 @@
-<RelativeLayout android:id="@+id/RelativeLayout01"
+<RelativeLayout
+    android:id="@+id/RelativeLayout01"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_centerInParent="true"
     android:orientation="vertical"
+    android:background="@color/BlueColor"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MenuScreen">
+    tools:context="MenuScreen">
 
     <Button
         android:layout_width="400dp"
@@ -15,6 +17,7 @@
         android:id="@+id/SettingsButton"
         android:layout_centerHorizontal="true"
         android:layout_centerInParent = "true"
+        android:background="@drawable/rounded_button"
         android:clickable="true"
         android:gravity="center_vertical|center_horizontal"
         android:onClick="settingButtonClick" />
@@ -26,6 +29,7 @@
         android:text="Exit"
         android:id="@+id/ExitButton"
         android:layout_below="@+id/SettingsButton"
+        android:background="@drawable/rounded_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:onClick="exitButtonClick" />
@@ -37,6 +41,7 @@
         android:text="Play"
         android:id="@+id/PlayButton"
         android:layout_above="@+id/SettingsButton"
+        android:background="@drawable/rounded_button"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"
         android:onClick="playButtonClick" />
