--- a/app/src/main/res/layout/activity_menu_screen.xml
+++ b/app/src/main/res/layout/activity_menu_screen.xml
@@ -17,7 +17,7 @@
         android:id="@+id/SettingsButton"
         android:layout_centerHorizontal="true"
         android:layout_centerInParent = "true"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/button_background"
         android:clickable="true"
         android:gravity="center_vertical|center_horizontal"
         android:onClick="settingButtonClick" />
@@ -29,7 +29,7 @@
         android:text="Exit"
         android:id="@+id/ExitButton"
         android:layout_below="@+id/SettingsButton"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/button_background"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:onClick="exitButtonClick" />
@@ -41,7 +41,7 @@
         android:text="Play"
         android:id="@+id/PlayButton"
         android:layout_above="@+id/SettingsButton"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/button_background"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"
         android:onClick="playButtonClick" />
