--- a/app/src/main/res/layout/activity_picture_list.xml
+++ b/app/src/main/res/layout/activity_picture_list.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools" 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BlueColor"
     tools:context="com.eecs481.tilematch.PictureList">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
+
         <GridView
             android:id="@+id/picList"
             android:layout_width="fill_parent"
