--- a/app/src/main/res/layout/activity_menu_screen.xml
+++ b/app/src/main/res/layout/activity_menu_screen.xml
@@ -10,39 +10,42 @@
     tools:context="MenuScreen">
 
     <Button
-        android:layout_width="400dp"
-        android:layout_height="150dp"
-        android:textSize="75dp"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
+        android:textSize="50dp"
         android:text="Settings"
         android:id="@+id/SettingsButton"
-        android:layout_centerHorizontal="true"
-        android:layout_centerInParent = "true"
         android:background="@drawable/button_background"
         android:clickable="true"
         android:gravity="center_vertical|center_horizontal"
-        android:onClick="settingButtonClick" />
+        android:onClick="settingButtonClick"
+        android:layout_marginBottom="250dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/PlayButton"
+        android:layout_alignStart="@+id/PlayButton" />
 
     <Button
-        android:layout_width="400dp"
-        android:layout_height="150dp"
-        android:textSize="75dp"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
+        android:textSize="50dp"
         android:text="Exit"
         android:id="@+id/ExitButton"
-        android:layout_below="@+id/SettingsButton"
         android:background="@drawable/button_background"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:onClick="exitButtonClick" />
+        android:onClick="exitButtonClick"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/SettingsButton"
+        android:layout_alignStart="@+id/SettingsButton"
+        android:layout_marginBottom="90dp" />
 
     <Button
-        android:layout_width="400dp"
-        android:layout_height="150dp"
-        android:textSize="75dp"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
+        android:textSize="50dp"
         android:text="Play"
         android:id="@+id/PlayButton"
         android:layout_above="@+id/SettingsButton"
         android:background="@drawable/button_background"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="60dp"
         android:onClick="playButtonClick" />
 </RelativeLayout>
