--- a/app/src/main/res/layout/activity_menu_screen.xml
+++ b/app/src/main/res/layout/activity_menu_screen.xml
@@ -9,43 +9,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="MenuScreen">
 
-    <Button
-        android:layout_width="350dp"
-        android:layout_height="100dp"
-        android:textSize="50dp"
-        android:text="Settings"
-        android:id="@+id/SettingsButton"
-        android:background="@drawable/button_background"
-        android:clickable="true"
-        android:gravity="center_vertical|center_horizontal"
-        android:onClick="settingButtonClick"
-        android:layout_marginBottom="250dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/PlayButton"
-        android:layout_alignStart="@+id/PlayButton" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="300dp"
+        android:id="@+id/menu_logoLayout">
 
-    <Button
-        android:layout_width="350dp"
-        android:layout_height="100dp"
-        android:textSize="50dp"
-        android:text="Exit"
-        android:id="@+id/ExitButton"
-        android:background="@drawable/button_background"
-        android:onClick="exitButtonClick"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/SettingsButton"
-        android:layout_alignStart="@+id/SettingsButton"
-        android:layout_marginBottom="90dp" />
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/logo"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/menu_logo" />
 
-    <Button
-        android:layout_width="350dp"
-        android:layout_height="100dp"
-        android:textSize="50dp"
-        android:text="Play"
-        android:id="@+id/PlayButton"
-        android:layout_above="@+id/SettingsButton"
-        android:background="@drawable/button_background"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
-        android:onClick="playButtonClick" />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="150dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Tile Match"
+            android:textSize="90dp"
+            android:textColor="@color/MaizeColor"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/menu_logo"
+            android:layout_toEndOf="@+id/menu_logo"
+            android:gravity="center_vertical" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false"
+        android:layout_below="@+id/menu_logoLayout" >
+
+        <Button
+            android:layout_width="350dp"
+            android:layout_height="100dp"
+            android:textSize="50dp"
+            android:text="Play"
+            android:id="@+id/PlayButton"
+            android:background="@drawable/button_background"
+            android:onClick="playButtonClick"
+            android:layout_above="@+id/SettingsButton"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="60dp"
+            android:layout_gravity="center_vertical" />
+
+        <Button
+            android:layout_width="350dp"
+            android:layout_height="100dp"
+            android:textSize="50dp"
+            android:text="Settings"
+            android:id="@+id/SettingsButton"
+            android:background="@drawable/button_background"
+            android:onClick="settingButtonClick"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_marginBottom="250dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignLeft="@+id/PlayButton"
+            android:layout_alignStart="@+id/PlayButton"
+            android:layout_gravity="center_vertical" />
+
+        <Button
+            android:layout_width="350dp"
+            android:layout_height="100dp"
+            android:textSize="50dp"
+            android:text="Exit"
+            android:id="@+id/ExitButton"
+            android:background="@drawable/button_background"
+            android:onClick="exitButtonClick"
+            android:layout_alignTop="@+id/SettingsButton"
+            android:layout_alignLeft="@+id/SettingsButton"
+            android:layout_alignStart="@+id/SettingsButton"
+            android:layout_marginTop="160dp" />
+
+
+    </RelativeLayout>
+
+
 </RelativeLayout>
